# tgvoip-test-suite

./: .gitignore
samples/: sample05_066a3936b4ebc1ca0c3b9e5d4e061e4b.pcm  sample05_0bb3646f15e8dc61f525f40f2884de57.pcm  sample05_14ae7b1886265e54e7f2c83d67eb802e.pcm  sample05_44823b5704b026f2930ad862576bef3c.pcm  sample05_7f3d7554d1fe70872389e84ebe802984.pcm  sample05_93fd2fb8e32e04fff51eaa1677a471c8.pcm  sample05_b4e08e2fae45c5991b82b80755d042a5.pcm  sample05_e181863bce6738bace6841b174713716.pcm  sample05_f8498e0018ea93b1158ec6fec09b23e5.pcm  sample05_ff63f34c691af48ef285649054ab4906.pcm  sample06_08332cdbd86d4f09d30cd81c4f436081.pcm  sample06_43af06b41db225c41a659da60408148a.pcm  sample06_6691afc81fd72df69da5b1a7a508b30e.pcm  sample06_afb5f1ecdd37621d1be77b20691fefd8.pcm  sample06_b05e9d0ca9fa03bc46191299c1bae645.pcm  sample06_b2f157ef91eaef1e2778a9b37326e3ef.pcm  sample06_fb64e39c9934c818b378a0532c38f50f.pcm  sample07_5574802a9f1816ded504abaccbd6ea79.pcm  sample14_1610bcfe3d4a5409ca90463ea8c0ef8f.pcm  sample14_7e30ddf39168a4ea0579f35d3baac0d9.pcm  sample14_9406179a57e6d882cba5a5c23c7e7e4f.pcm  sample14_9688780a39194d29f54f79bb9a6a9910.pcm  sample15_03c54b861f72cce82609dd3acbaa85fb.pcm  sample15_1a7df29173d06cd4119ea338d1e8e05c.pcm  sample15_4a30a6c03e108b963d0afe692558e3ec.pcm  sample15_64900b3ffd4aa70f5e5d9641952094e8.pcm  sample15_75836e80be4f3370e27e3f17bbce3433.pcm  sample15_8082d542b11fb2be2869f8f45b292373.pcm  sample15_a5c5e22bcb1d4585beba504d73b6cc99.pcm  sample15_c38cd5c611532af5e79ed0958c415880.pcm  (+8 more)
src/tgvoipcall/: CMakeLists.txt  main.cpp
tests/: call.php  (+8 more)
(+5 files in other folders)
